Created all tests except study tests.